--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Halaman At Iba Pa Store - Explore our Products</title>
 	  <meta charset="utf-8">
 	  <meta name="description" content="Explore our list of wonderful selection of products."/>
-<link rel="apple-touch-icon" sizes="120x120" href="/favicon.ico" /> <link rel="apple-touch-icon" sizes="152x152" href="/favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 </head>
 <body>
 <body style="background-color:lightgreen;">
