--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <h4>Note: To know our product's price go to our messenger chat or call/message us.</h4>
 <h4>Note: This page will be always updated without further notice.</h4>
 
+
 <div></div>
 
 <h2>Our Contact Details</h2>
@@ -178,10 +179,16 @@
   <img src="21.JPG" alt="Pagoda">
 </img>
 
+<h4>Note: This website may not work on older web browsers or some features may not work or displayed incorrectly.</h4>
+<h4>Tip: We suggest you to use the latest versions of the web browser if possible. Make sure to check browsers with HTML 5 Support.</h4>
+<h4>Tip: You can check that on https://html5test.com/ or <a href="https://html5test.com">Click Here</a> and check your browser's HTML 5 capacity.</h4>
+<h4>Tip: To view this website better and view it correctly, use browsers with at least 400 or higher scores on the said HTML 5 test.</h4>
 
 <div></div>
 
-<center><h3>Halaman At Iba Pa Management. All Rights Reserved.<center><h3>
+<center><h4>This is created by the efforts of Halaman At Iba Pa Management and its creators.</h4><center>
+<center><h4>All plugins and extensions used in this website are owned by their corresponding owners.</h4><center>
+<center><h4>All Rights Reserved.</h4><center>
 
 <div></div>
 
