--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <h4>Note: You can buy all of these in our store (Address of the store is on the contact details)</h4>
 <h4>Note: This store offer only the list of our prodcuts, without their price.</h4>
 <h4>Note: To know our product's price go to our messenger chat or call/message us.</h4>
-<p>Note: This page will be always updated without further notice.</p>
+<h4>Note: This page will be always updated without further notice.</h4>
 
-<h4> For Our Official Website <a href="https://halamanatibapahosting.github.io/halamanatibapa.github.io//">Click Here</a>
+<p>For Our Official Website <a href="https://halamanatibapahosting.github.io/halamanatibapa.github.io//">Click Here</a></p>
 
 <div></div>
 
