Grammar Error Fixed

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 </img>
 
 <h4>Note: This website may not work on older web browsers or some features may not work or displayed incorrectly.</h4>
-<h4>Tip: We suggest you to use the latest versions of the web browser if possible. Make sure to check browsers with HTML 5 Support.</h4>
+<h4>Tip: We suggest you to use the latest versions of the web browser if possible. Make sure to use browsers with HTML 5 Support.</h4>
 <h4>Tip: You can check that on https://html5test.com/ or <a href="https://html5test.com">Click Here</a> and check your browser's HTML 5 capacity.</h4>
 <h4>Tip: To view this website better and view it correctly, use browsers with at least 400 or higher scores on the said HTML 5 test.</h4>
 
