add bold tag to the title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <img src="C25.jpg" alt="Halaman At Iba Pa Cover Photo">
 </img></center>
 
-<center><h1>Halaman At Iba Pa Store</h1></center>
+<b><center><h1>Halaman At Iba Pa Store</h1></center></b>
 <h4>Note: This store is not offering delivery and add to cart and buy services.</h4>
 <h4>Note: You can buy all of these in our store (Address of the store is on the contact details)</h4>
 <h4>Note: This store offer only the list of our prodcuts, without their price.</h4>
