--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <img>
   <source srcset="5.jpg">
-  <img src="5.jpg" alt="Foxtail">
+  <img src="5.jpg" alt="Eugenia">
 </img>
 
 
@@ -88,7 +88,7 @@
 
 <img>
   <source srcset="8.jpg">
-  <img src="8.jpg" alt="Sammuio">
+  <img src="8.jpg" alt="Pinsaray">
 </img>
 
 <div></div>
@@ -143,7 +143,10 @@
   <img src="19.JPG" alt="Red Sayam">
 </img>
 
-
+<img>
+  <source srcset="22.jpg">
+  <img src="22.jpg" alt="Marble Queen">
+</img>
 
 
 <h2>Tuffiary (For Orders only)</h2>
