--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 <img>
   <source srcset="15.JPG">
-  <img src="15.JPG" alt="Mayana">
+  <img src="15.JPG" alt="Marble Queen">
 </img>
 
 <div></div> 
@@ -141,11 +141,6 @@
 <img>
   <source srcset="19.JPG">
   <img src="19.JPG" alt="Red Sayam">
-</img>
-
-<img>
-  <source srcset="22.jpg">
-  <img src="22.jpg" alt="Marble Queen">
 </img>
 
 
