Correction on File Names

--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
 
 <img>
   <source srcset="15.JPG">
-  <img src="15.JPG" alt="Marble Queen">
+  <img src="15.jpg" alt="Marble Queen">
 </img>
 
 <div></div> 
 
 <img>
   <source srcset="14.JPG">
-  <img src="14.JPG" alt="Spider">
+  <img src="14.jpg" alt="Spider">
 </img>
 
 <img>
@@ -140,7 +140,7 @@
 
 <img>
   <source srcset="19.JPG">
-  <img src="19.JPG" alt="Red Sayam">
+  <img src="19.jpg" alt="Red Siam">
 </img>
 
 
