--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 </img>
 
 <img>
-  <source srcset="15.JPG">
+  <source srcset="15.jpg">
   <img src="15.jpg" alt="Marble Queen">
 </img>
 
 <div></div> 
 
 <img>
-  <source srcset="14.JPG">
+  <source srcset="14.jpg">
   <img src="14.jpg" alt="Spider">
 </img>
 
@@ -139,10 +139,14 @@
 </img>
 
 <img>
-  <source srcset="19.JPG">
+  <source srcset="19.jpg">
   <img src="19.jpg" alt="Red Siam">
 </img>
 
+<img>
+  <source srcset="15.JPG">
+  <img src="15.JPG" alt="Red Siam">
+</img>
 
 <h2>Tuffiary (For Orders only)</h2>
 
