--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 <img>
   <source srcset="15.JPG">
-  <img src="15.JPG" alt="Red Siam">
+  <img src="15.JPG" alt="Mayana">
 </img>
 
 <h2>Tuffiary (For Orders only)</h2>
