--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
   <img src="15.JPG" alt="Mayana">
 </img>
 
+<img>
+  <source srcset="14.JPG">
+  <img src="14.JPG" alt="Silver Wall">
+</img>
+
 <h2>Tuffiary (For Orders only)</h2>
 
 <div></div>
