--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Halaman At Iba Pa Store - Explore our Products</title>
 	  <meta charset="utf-8">
+	  <meta name="viewport" content="width=1280, initial-scale=1">
 	  <meta name="description" content="Explore our list of wonderful selection of products."/>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 </head>
