--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Halaman At Iba Pa Store - Explore our Products</title>
 	  <meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=' + scale + ', maximum-scale=' + scale + ', user-scalable=0">');
+	  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=' + scale + ', maximum-scale=' + scale + ', user-scalable=0">
 	  <meta name="description" content="Explore our list of wonderful selection of products."/>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 </head>
