--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 <body style="background-color:lightgreen;">
+	
+	<h2>Beta version of this version is ahead, that will replace this one</h2>
+	<a href="https://sites.google.com/view/halamanatibapa/home">Click Here to try the Beta version</a>
+
 
 <div></div>
 
