--- a/index.html
+++ b/index.html
@@ -2,218 +2,19 @@
 <html lang="en">
 <html>
   <head>
-    <title>Halaman At Iba Pa Store - Explore our Products</title>
+          <title>Halaman At Iba Pa Official Website and Store - Redirect</title>
 	  <meta charset="utf-8">
-	  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=' + scale + ', maximum-scale=' + scale + ', user-scalable=0">
-	  <meta name="description" content="Explore our list of wonderful selection of products."/>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 </head>
-<body>
-<body style="background-color:lightgreen;">
-	
-	<h2>Beta version of this version is ahead, that will replace this one</h2>
-	<a href="https://sites.google.com/view/halamanatibapa/home">Click Here to try the Beta version</a>
 
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<h1>Halaman At Iba Pa Official Website and Store</h1>
+<h2>We are Redirecting you to our new website</h2>
 
-<div></div>
+<p>We moved our website to a new website hosting platform.</p>
+<p>Wait a second, to redirect automatically.</p>
+<p>We combined the store and website to give you a better experience.</p>
 
-<center><img>
-  <source srcset="C25.jpg">
-  <img src="C25.jpg" alt="Halaman At Iba Pa Cover Photo">
-</img></center>
+<h4>If you are not redirected by your web browser, <a href="https://sites.google.com/view/halamanatibapa/home/">Click Here</a>
 
-<b><center><h1>Halaman At Iba Pa Store</h1></center></b>
-<h4>Note: This store is not offering delivery and add to cart and buy services.</h4>
-<h4>Note: You can buy all of these in our store (Address of the store is on the contact details)</h4>
-<h4>Note: This store offer only the list of our prodcuts, without their price.</h4>
-<h4>Note: To know our product's price go to our messenger chat or call/message us.</h4>
-<h4>Note: This page will be always updated without further notice.</h4>
-
-<p>For Our Official Website <a href="https://halamanatibapahosting.github.io/halamanatibapa.github.io//">Click Here</a></p>
-
-<div></div>
-
-<h2>Our Contact Details</h2>
-<p>Address: Carillo Farm Road, Carillo, Hagonoy, Bulacan (3002)
-<p>Email us at halamanatibapa123@gmail.com</p>
-<p>Contact Number:09567958325 (Globe Telecom) or 09292566133 (Smart)</p>
-
-<center><h2>List of our Products</h2></center>
-
-<div></div>
-
-<h2>Ornamental Plants (You can buy immediately)</h3>
-
-<div></div>
-
-<img>
-  <source srcset="1.jpg">
-  <img src="1.jpg" alt="Lemon Top">
-</img>
-
-
-<img>
-  <source srcset="2.jpg">
-  <img src="2.jpg" alt="Yellow Bush">
-</img>
-
-
-<img>
-  <source srcset="3.jpg">
-  <img src="3.jpg" alt="Makki">
-</img>
-
-
-
-<img>
-  <source srcset="4.jpg">
-  <img src="4.jpg" alt="Bloddy Mary">
-</img>
-
-<div></div>
-
-<img>
-  <source srcset="5.jpg">
-  <img src="5.jpg" alt="Eugenia">
-</img>
-
-
-<img>
-  <source srcset="6.jpg">
-  <img src="6.jpg" alt="Moises In The Boot">
-</img>
-
-
-
-<img>
-  <source srcset="7.jpg">
-  <img src="7.jpg" alt="Snake Plant">
-</img>
-
-
-<img>
-  <source srcset="8.jpg">
-  <img src="8.jpg" alt="Pinsaray">
-</img>
-
-<div></div>
-
-<img>
-  <source srcset="9.jpg">
-  <img src="9.jpg" alt="Aloe Vera">
-</img>
-
-<img>
-  <source srcset="12.JPG">
-  <img src="12.JPG" alt="Pandanus">
-</img>
-
-
-<img>
-  <source srcset="13.jpg">
-  <img src="13.JPG" alt="Octopus 5 Fingers">
-</img>
-
-<img>
-  <source srcset="15.jpg">
-  <img src="15.jpg" alt="Marble Queen">
-</img>
-
-<div></div> 
-
-<img>
-  <source srcset="14.jpg">
-  <img src="14.jpg" alt="Spider">
-</img>
-
-<img>
-  <source srcset="16.JPG">
-  <img src="16.JPG" alt="Sanseveria WhaleFin">
-</img>
-
-<img>
-  <source srcset="17.JPG">
-  <img src="17.JPG" alt="Sanseveria Black Star">
-</img>
-
-<div></div>
-
-<img>
-  <source srcset="18.JPG">
-  <img src="18.JPG" alt="Calanchoy">
-</img>
-
-<img>
-  <source srcset="19.jpg">
-  <img src="19.jpg" alt="Red Siam">
-</img>
-
-<div></div>
-
-<img>
-  <source srcset="15.JPG">
-  <img src="15.JPG" alt="Mayana">
-</img>
-
-<img>
-  <source srcset="14.JPG">
-  <img src="14.JPG" alt="Silver Wall">
-</img>
-
-<h2>Tuffiary (For Orders only)</h2>
-
-<div></div>
-
-<img>
-  <source srcset="10.jpg">
-  <img src="10.jpg" alt="Bilog">
-</img>
-
-<img>
-  <source srcset="11.jpg">
-  <img src="11.jpg" alt="Spiral">
-</img>
-
-<img>
-  <source srcset="20.JPG">
-  <img src="20.JPG" alt="Cone">
-</img>
-
-<img>
-  <source srcset="21.JPG">
-  <img src="21.JPG" alt="Pagoda">
-</img>
-
-<h4>Note: This website may not work on older web browsers or some features may not work or displayed incorrectly.</h4>
-<h4>Tip: We suggest you to use the latest versions of the web browser if possible. Make sure to use browsers with HTML 5 Support.</h4>
-<h4>Tip: You can check that on https://html5test.com/ or <a href="https://html5test.com">Click Here</a> and check your browser's HTML 5 capacity.</h4>
-<h4>Tip: To view this website better and view it correctly, use browsers with at least 450 or higher scores on the said HTML 5 test.</h4>
-
-<div></div>
-
-<center><h4>This is created by the efforts of Halaman At Iba Pa Management and its creators.</h4><center>
-<center><h4>All plugins and extensions used in this website are owned by their corresponding owners.</h4><center>
-<center><h4>All Rights Reserved.</h4><center>
-
-<div></div>
-
-<!-- GetButton.io widget -->
-<script type="text/javascript">
-    (function () {
-        var options = {
-            facebook: "104428287624816", // Facebook page ID
-            call_to_action: "Message us", // Call to action
-            position: "right", // Position may be 'right' or 'left'
-        };
-        var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
-        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
-        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
-        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
-    })();
-</script>
-<!-- /GetButton.io widget -->
-</script>
-<!-- /GetButton.io widget -->
-
-</body>
-</html>
+<h3>Halaman At Iba Pa Management. All Rights Reserved</h3>
+<meta http-equiv = "refresh" content = "1; url = https://sites.google.com/view/halamanatibapa/home" />
