--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
           <title>Halaman At Iba Pa Official Website and Store - Redirect</title>
 	  <meta charset="utf-8">
+	  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 </head>
 
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
