--- a/index.html
+++ b/index.html
@@ -2,20 +2,8 @@
 <html lang="en">
 <html>
   <head>
-          <title>Halaman At Iba Pa Official Website and Store - Redirect</title>
+          <title>Redirecting.....</title>
 	  <meta charset="utf-8">
 	  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-</head>
-
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-<h1>Halaman At Iba Pa Official Website and Store</h1>
-<h2>We are Redirecting you to our new website</h2>
-
-<p>We moved our website to a new website hosting platform.</p>
-<p>Wait a second, to redirect automatically.</p>
-<p>We combined the store and website to give you a better experience.</p>
-
-<h4>If you are not redirected by your web browser, <a href="https://sites.google.com/view/halamanatibapa/home/">Click Here</a>
-
-<h3>Halaman At Iba Pa Management. All Rights Reserved</h3>
-<meta http-equiv = "refresh" content = "1; url = https://sites.google.com/view/halamanatibapa/home" />
+          
+<meta http-equiv="refresh" content="0; url=https://sites.google.com/view/halamanatibapa">
