--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <head>
           <title>Redirecting.....</title>
 	  <meta charset="utf-8">
-	  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+	  <link rel="shortcut icon" type="image/x-icon" href="favicon.png?">
           
 <meta http-equiv="refresh" content="0; url=https://sites.google.com/view/halamanatibapa">
