--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
 	  <meta charset="utf-8">
 	  <link rel="shortcut icon" type="image/x-icon" href="favicon.png?">
           
-<meta http-equiv="refresh" content="0; url=https://sites.google.com/view/halamanatibapa">
+<meta http-equiv="refresh" content="0; url=https://sites.google.com/view/hatiplants">
